# personal-finance-tracker

./: .gitignore
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.jsx  main.jsx
client/src/components/charts/: AccountBalanceChart.jsx
client/src/components/containers/: AccountDetails.jsx  AccountTransactions.jsx  Accounts.jsx  AddAndSort.jsx  AddFilterSort.jsx  DeleteAccount.jsx  DeleteTransaction.jsx  EditAccount.jsx  Logout.jsx  (+7 more)
client/src/context/: AuthContext.jsx
client/src/lib/: calculateBalance.js  calculateTimeAgo.js  routes.config.jsx  supportedCurrencies.js  transactionCategories.js  transactionsGroupsSort.js  useAxios.js
client/src/pages/: AccountDetailsPage.jsx  AccountsPage.jsx  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx  TransactionsPage.jsx
server/: pyproject.toml
server/api/v1/: urls.py
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: base.py  dev.py
server/core/accounts/: admin.py  apps.py  models.py  serializers.py  views.py
server/core/accounts/migrations/: 0001_initial.py  0002_account_currency.py  0003_alter_account_color.py
server/core/transactions/: admin.py  apps.py  models.py  serializers.py  views.py
server/core/transactions/migrations/: 0001_initial.py  0002_alter_transaction_options_alter_transaction_amount_and_more.py
server/core/users/: admin.py  apps.py  models.py  serializers.py  views.py
server/core/users/migrations/: 0001_initial.py
server/core/utils/: choices.py  currency_converter.py  exceptions.py  permissions.py  validators.py
(+8 files in other folders)
